# LearnToHex

./: .gitignore  average.py  average_plotter.py  plotter.py
experiments/: create_hori_line.py
experiments/activation_experiments/linear_activation/TD/models/: linearActivation_TDmodel.model
experiments/activation_experiments/rectifier_activation/TD/models/: rectifierActivation_TDmodel.model
experiments/activation_experiments/tanh_activation/TD/models/: tanhActivation_TDmodel.model
experiments/average/logs/: td_average_previous
experiments/boardsize_experiment/7x7/TD/models/: TDmodel.model  highestWR.model
experiments/boardsize_experiments/3x3/TD/models/: TDmodel3x3_autosave.model
experiments/boardsize_experiments/5x5/TD/models/: TDmodel5x5_autosave.model
experiments/boardsize_experiments/7x7/ES/models/: CSAmodel.model  CSAmodel7x7_autosave.model  highestWR.model
experiments/boardsize_experiments/7x7/TD/models/: TDmodel7x7_autosave.model
experiments/shape_experiments/ES/models/: 20-10_CSAmodel.model  80-40_CSAmodel.model
experiments/shape_experiments/TD/models/: 160-80_TDmodel.model  20-10_TDmodel.model  80-40_TDmodel.model
gimp/: hex5x5.xcf
hex/: CMakeLists.txt  DataLogger.hpp  Hex.hpp  SelfRLCMA.h  SelfRLCMA2.h  SelfRLTDL.h  hex_algorithms.hpp  hex_strategies.hpp  main.cpp  playhex.py  strategies.hpp  td_main.cpp
hex/src/: Hex.hpp
polebench/: CMakeLists.txt  ObjectiveFunctions.hpp  SelfRLCMA.h  Strategies.hpp  TDL.hpp  main.cpp
report/: main.tex  preamble.tex
